--- a/mysteriumProject/mysterium/templates/index.html
+++ b/mysteriumProject/mysterium/templates/index.html
@@ -10,7 +10,16 @@
 
 <div class="glider-contain">
     <div class="glider">
-        
+        {% for post in posts %}
+        <div class="card" style="width: 18rem;">
+            <img src="{{ post.image.url }}" class="card-img-top" alt="Mystery Image">
+            <div class="card-body">
+                <h5 class="card-title">{{ post.title }}</h5>
+                <p class="card-text">{{ post.description|truncatewords:10 }}</p>
+                <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 
     <!-- Navigation Arrows -->
