--- a/mysteriumProject/mysterium/templates/login.html
+++ b/mysteriumProject/mysterium/templates/login.html
@@ -13,7 +13,7 @@
     <div class="login-container">
         <h1 class="login-title">Mysterium</h1>
         <div class="avatar mb-4">
-            <img src="{% static 'images/avatar.jpg' %}" alt="User Avatar" class="rounded-circle">
+            <img src="{% static 'images/AvatarTemplate.png' %}" alt="User Avatar" class="rounded-circle">
         </div>
         <form method="post" class="login-form">
             {% csrf_token %}
