--- a/mysteriumProject/mysterium/templates/base.html
+++ b/mysteriumProject/mysterium/templates/base.html
@@ -25,7 +25,7 @@
                 <a class="navbar-brand" href="#">MYSTERIUM</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
                     </ul>
