--- a/mysteriumProject/mysterium/templates/login.html
+++ b/mysteriumProject/mysterium/templates/login.html
@@ -15,6 +15,9 @@
         <div class="avatar mb-4">
             <img src="{% static 'images/AvatarTemplate.png' %}" alt="User Avatar" class="rounded-circle">
         </div>
+        {% if error %}
+        <div class="alert alert-danger">{{ error }}</div>
+        {% endif %}
         <form method="post" class="login-form">
             {% csrf_token %}
             <div class="form-group">
@@ -29,7 +32,7 @@
                 <input type="checkbox" class="form-check-input" id="remember" name="remember">
                 <label class="form-check-label" for="remember">Remember me</label>
             </div>
-            <button type="submit" class="login-button">Register</button>
+            <button type="submit" class="login-button">Login</button>
         </form>
     </div>
 
