--- a/mysteriumProject/mysterium/templates/postCreation.html
+++ b/mysteriumProject/mysterium/templates/postCreation.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/postCreationStyle.css' %}">
 <div class="container mt-5 d-flex justify-content-center">
     <div class="share-container p-4 rounded-3 shadow-lg">
         <h2 class="text-center mb-4">Share Your Mystery</h2>
