--- a/mysteriumProject/static/css/postDetailStyle.css
+++ b/mysteriumProject/static/css/postDetailStyle.css
@@ -6,7 +6,13 @@ body {
     background-size: cover;
 }
 
+h2, h4{
+    color: aliceblue !important;
+}
+
 .post-image {
+    max-width: 200px;
+    max-height: 200px;
     border-radius: 12px;
     overflow: hidden;
 }
@@ -17,6 +23,7 @@ body {
 
 .comment {
     margin-bottom: 10px;
+    color: rgb(0, 0, 0);
 }
 
 textarea {
