--- a/mysteriumProject/mysterium/templates/postDetail.html
+++ b/mysteriumProject/mysterium/templates/postDetail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load custom_filter %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/postDetailStyle.css' %}">
@@ -7,7 +8,11 @@
     <!-- Post Title -->
     <h2 class="text-center mb-4">{{post.title}}</h2>
 
-    <!-- Post Content -->
+    <!-- Post Edit -->
+    {% if request.user == post.user %}
+    <a href="{% url 'edit_post' post.id %}" class="btn btn-warning mt-3">Edit Post</a>
+    {% endif %}
+
     <!-- Post Content -->
     <div class="row">
         <!-- Post Image and Description -->
@@ -30,12 +35,20 @@
             <div class="semantic-tags mb-4">
                 <h5>Tags:</h5>
                 <div class="tags-list">
-                    {% for tag in tags %}
-                    <span class="badge bg-primary">{{ tag }}</span>
+                    {% for tag_name, q_number in tags %}
+                    {% if q_number %}
+                    <a href="https://www.wikidata.org/wiki/Q{{ q_number }}" target="_blank"
+                        class="badge bg-primary text-decoration-none">
+                        {{ tag_name }}
+                    </a>
+                    {% else %}
+                    <span class="badge bg-secondary">{{ tag_name }}</span>
+                    {% endif %}
                     {% endfor %}
                 </div>
             </div>
             {% endif %}
+
 
             <!-- UpVote/DownVote Buttons -->
             <div class="d-flex mb-4">
@@ -73,7 +86,7 @@
                     <strong>{{ comment.user.username }}</strong>
                     <p>{{ comment.text }}</p>
                     <small>{{ comment.created_at }}</small>
-                    <!-- Like/Dislike Buttons -->
+                    <!-- Upvote/Downvote Buttons -->
                     <div class="d-flex mb-4">
                         <button class="btn btn-outline-primary me-2">
                             <i class="bi bi-hand-thumbs-up"></i> Upvote
