--- a/mysteriumProject/static/css/indexStyle.css
+++ b/mysteriumProject/static/css/indexStyle.css
@@ -10,6 +10,52 @@ h2{
     color: antiquewhite;
 }
 
+.search-results-container {
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    right: 20px;
+    z-index: 100;
+    background-color: white;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    max-height: 300px;
+    overflow-y: auto;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+.search-results {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.search-results li {
+    padding: 5px;
+    border-bottom: 1px solid #eee;
+}
+
+.search-results li a {
+    text-decoration: none;
+    color: #333;
+}
+
+.close-btn {
+    float: right;
+    font-size: 18px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+}
+
+
 .cards-section {
     display: flex;
     justify-content: center;
