Modified: wikidata fetch methods in wikidata_utils.py, search function simplified and refactored views.py
Fixed the multi-tag search by sending tags as a JSON string from the frontend and parsing it on the backend. Updated the fetch_wikidata function to process multiple tags simultaneously, returning individual search results for each tag. Improved handling to display results correctly in the frontend.

--- a/mysteriumProject/mysterium/templates/index.html
+++ b/mysteriumProject/mysterium/templates/index.html
@@ -5,8 +5,8 @@
 <div class="index-page">
     <section class="hero">
         <h2>Find the Mystery</h2>
-        <form id="search-form">
-            <input type="text" id="search-input" placeholder="Search..." class="search-bar">
+        <form id="search-form" action="{% url 'search_tags' %}" method="get">
+            <input type="text" id="search-input" name="query" placeholder="Enter tags..." class="search-bar">
             <button type="submit" class="search-btn">Search</button>
         </form>
 
