--- a/mysteriumProject/static/css/postCreationStyle.css
+++ b/mysteriumProject/static/css/postCreationStyle.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background: url('/static/images/MysteriumBackground.jpg') no-repeat center center fixed;
+    background-image: url('/static/images/MysteriumBackGround.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
